Fix Aiven MySQL hostname and add SSL configuration

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ VERIFY_TOKEN=my_secret_token
 # DATABASE CONFIGURATION (MySQL - Aiven)
 # ------------------------------------------------
 # For Aiven MySQL, use the connection details from your dashboard
-DB_HOST=mysql-1c3f5577-automationbot-5abf.l.aivencloud.com
+DB_HOST=mysql-1c3f5577-automationbot-5abf.i.aivencloud.com
 DB_PORT=25620
 DB_USER=avnadmin
 DB_PASSWORD=your_password_here
